--- a/REPR/REPR.csproj
+++ b/REPR/REPR.csproj
@@ -6,7 +6,21 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
+	<PropertyGroup>
+		  <PackageId>REPR</PackageId>
+		  <Version>1.0.0</Version>
+		  <Authors>Tyler La Vay</Authors>
+		  <Description>
+			  Rest EndPoint Response REPR is a lightweight library that implements the Mediator design pattern in .NET.
+			  It helps decouple the sender of a request from its handler, promoting cleaner architecture and separation of concerns.
+			  Instead of calling services or logic directly, you send a request (like a command or query),
+			  and REPR routes it to the appropriate handler.
+			  GIT: https://github.com/tlavay/REPR
+		  </Description>
+		  <PackageTags>REPR;MediatorPattern;</PackageTags>
+	</PropertyGroup>
+
+	<ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
   </ItemGroup>
 
