--- a/REPR/REPR.csproj
+++ b/REPR/REPR.csproj
@@ -8,7 +8,7 @@
 
 	<PropertyGroup>
 		  <PackageId>REPR</PackageId>
-		  <Version>1.0.0</Version>
+		  <Version>9.0.0</Version>
 		  <Authors>Tyler La Vay</Authors>
 		  <Description>
 			  Rest EndPoint Response REPR is a lightweight library that implements the Mediator design pattern in .NET.
@@ -19,7 +19,9 @@
 		  </Description>
 		  <PackageTags>REPR;MediatorPattern;</PackageTags>
 	</PropertyGroup>
-
+	<PropertyGroup>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	</PropertyGroup>
 	<ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
   </ItemGroup>
