--- a/REPR/REPR.csproj
+++ b/REPR/REPR.csproj
@@ -8,8 +8,8 @@
 
 	<PropertyGroup>
 		  <PackageId>REPR</PackageId>
-		  <Version>9.0.1</Version>
-		<Company>LaVayApplications</Company>
+		  <Version>9.0.0</Version>
+			<Company>LaVayApplications</Company>
 		  <Authors>Tyler La Vay</Authors>
 		  <Description>
 			  Rest EndPoint Response REPR is a lightweight library that implements the Mediator design pattern in .NET.
@@ -22,6 +22,7 @@
 	</PropertyGroup>
 	<PropertyGroup>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 	<ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
