--- a/REPR/REPR.csproj
+++ b/REPR/REPR.csproj
@@ -8,7 +8,7 @@
 
 	<PropertyGroup>
 		  <PackageId>REPR</PackageId>
-		  <Version>9.0.0</Version>
+		  <Version>9.0.1</Version>
 			<Company>LaVayApplications</Company>
 		  <Authors>Tyler La Vay</Authors>
 		  <Description>
@@ -27,8 +27,12 @@
 	<ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
   </ItemGroup>
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="" />
+	</ItemGroup>
 
-  <ItemGroup>
+
+	<ItemGroup>
     <InternalsVisibleTo Include="REPR.UnitTests" />
   </ItemGroup>
 
